--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </h1>
             
             <div class="text-xl md:text-2xl font-mono text-white/60 mb-8 typewriter">
-                > Cloud_Architect YO && Engineering_Leader
+                > Cloud_Architect YO HO && Engineering_Leader
             </div>
             
             <p class="text-lg text-white/70 max-w-2xl mx-auto mb-12 leading-relaxed">
