--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <span class="block bg-gradient-to-r from-cyan-400 via-purple-400 to-pink-400 bg-clip-text text-transparent neon-text">GUPTA</span>
             </h1>
             
-            <div class="text-xl md:text-2xl font-mono text-white/60 mb-8 typewriter">
+            <div class="text-sm sm:text-lg md:text-xl lg:text-2xl xl:text-3xl font-mono text-white/60 mb-8 sm:typewriter">
                 > Cloud_Architect && Engineering_Leader
             </div>
             
