--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 > Cloud_Architect && Engineering_Leader
             </div>
             
-            <p class="text-lg text-white/70 max-w-2xl mx-auto mb-12 leading-relaxed">
+            <p class="text-white/70 max-w-2xl mx-auto mb-12 leading-relaxed" style="font-size: clamp(14px, 4vw, 20px);">
                 20 Year-Old with 3 years of experience with AWS & DevOPS with 3 Certs to back it up. I have dabbled quiet a bit into GenAI and ML. 
             </p>
             
