--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
                 <span class="block bg-gradient-to-r from-cyan-400 via-purple-400 to-pink-400 bg-clip-text text-transparent neon-text">GUPTA</span>
             </h1>
             
-            <div class="text-sm sm:text-lg md:text-xl lg:text-2xl xl:text-3xl font-mono text-white/60 mb-8 sm:typewriter">
+            <div class="text-sm sm:text-lg md:text-xl lg:text-2xl xl:text-3xl font-mono text-white/60 mb-8 typewriter">
                 > Cloud_Architect && Engineering_Leader
             </div>
+
             
             <p class="text-white/70 max-w-2xl mx-auto mb-12 leading-relaxed" style="font-size: clamp(14px, 4vw, 20px);">
                 20 Year-Old with 3 years of experience with AWS & DevOPS with 3 Certs to back it up. I have dabbled quiet a bit into GenAI and ML. 
