--- a/index2.html
+++ b/index2.html
@@ -684,7 +684,7 @@
             </div>
 
             <h1 class="hero-title">
-                <span class="first-name glitch" data-text="DRISHAN">DRISHAN</span>
+                <span class="first-name" data-text="DRISHAN">DRISHAN</span>
                 <span class="last-name">GUPTA</span>
             </h1>
 
