--- a/index.html
+++ b/index.html
@@ -94,15 +94,17 @@
                                 <div class="w-3 h-3 bg-cyan-400 rounded-full"></div>
                                 <span class="text-xs font-mono text-cyan-400">PROJECT_01</span>
                             </div>
-                            <h3 class="text-3xl font-bold mb-4 text-white">Serverless Image Processor</h3>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Agentic Hackathon Finder (FindAthon9000)</h3>
                             <p class="text-white/70 mb-6 leading-relaxed">
-                                Revolutionary serverless architecture processing millions of images with 70% cost reduction. Built with S3, Lambda, and API Gateway for infinite scalability.
+                                This Agentic AI bot writes its OWN scrapper for every new hackathon website it encounters, and runs the scrapper in an isolated ECS container. This serverless architecture allows 
+                                infinite scaling. Uses bedrock, bedrock knowledge bases, RDS(to store scrappers once written or to store found apis). Once it scrapes everything, it sends reminders on telegram on the 
+                                hackathons user finds interesting. 
                             </p>
                             <div class="flex flex-wrap gap-2 mb-8">
-                                <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">AWS</span>
+                                <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">Bedrock</span>
                                 <span class="px-3 py-1 bg-purple-500/20 text-purple-300 text-xs font-mono border border-purple-500/30 rounded">LAMBDA</span>
-                                <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">S3</span>
-                                <span class="px-3 py-1 bg-emerald-500/20 text-emerald-300 text-xs font-mono border border-emerald-500/30 rounded">PYTHON</span>
+                                <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">RDS</span>
+                                <span class="px-3 py-1 bg-emerald-500/20 text-emerald-300 text-xs font-mono border border-emerald-500/30 rounded">OpenSearchServerless</span>
                             </div>
                             <div class="flex gap-4">
                                 <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-cyan-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
@@ -113,7 +115,7 @@
                     <div class="order-1 lg:order-2">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/20 to-purple-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="https://placehold.co/600x400/111111/FFFFFF?text=SERVERLESS_ARCH" alt="Architecture" class="relative rounded-lg border border-white/10 w-full">
+                            <img src="HackathonFinder.png" alt="Architecture" class="relative rounded-lg border border-white/10 w-full">
                         </div>
                     </div>
                 </div>
