--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
                     <div class="order-1 lg:order-2">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/20 to-purple-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="HackathonFinder.png" alt="Architecture" class="relative rounded-lg border border-white/10 w-full">
+                            <img src="HackathonFinder.png" alt="Architecture" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-cyan-400/50 hover:scale-[1.02] transition-all duration-300"
+                            data-images='["diagram-export-10-22-2025-1_35_30-AM.png", "infrastructure-composer-Hackathon-Hunter-Stack.yaml(1).png"]'>
+                            <div class="absolute bottom-4 right-4 bg-black/50 p-2 rounded-full pointer-events-none">
+                                <svg class="w-4 h-4 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"/></svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -293,5 +297,27 @@
     </section>
 
     <script src="script.js" defer></script>
+    <div id="lightbox" class="fixed inset-0 z-[100] hidden bg-black/95 backdrop-blur-xl flex items-center justify-center opacity-0 transition-opacity duration-300">
+    
+    <button id="close-lightbox" class="absolute top-6 right-6 text-white/50 hover:text-cyan-400 transition-colors z-50 p-2">
+        <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
+    </button>
+
+    <button id="prev-btn" class="absolute left-2 md:left-8 text-white/50 hover:text-cyan-400 hover:scale-110 transition-all z-50 p-4">
+        <svg class="w-10 h-10 md:w-12 md:h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/></svg>
+    </button>
+
+    <div class="relative max-w-7xl w-full p-4 flex justify-center">
+        <img id="lightbox-img" src="" class="max-h-[85vh] w-auto object-contain rounded-lg border border-cyan-500/30 shadow-[0_0_50px_rgba(34,211,238,0.2)]">
+        
+        <div class="absolute -bottom-12 text-white/50 font-mono text-sm">
+            <span id="img-counter">1</span> / <span id="img-total">3</span>
+        </div>
+    </div>
+
+    <button id="next-btn" class="absolute right-2 md:right-8 text-white/50 hover:text-purple-400 hover:scale-110 transition-all z-50 p-4">
+        <svg class="w-10 h-10 md:w-12 md:h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
+    </button>
+</div>
 </body>
 </html>
