--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                                 <div class="w-3 h-3 bg-purple-400 rounded-full"></div>
                                 <span class="text-xs font-mono text-purple-400">PROJECT_02</span>
                             </div>
-                            <h3 class="text-3xl font-bold mb-4 text-white">CI/CD Pipeline</h3>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Secure Serverless Portfolio Deployment with OIDC & AWS STS</h3>
                             <p class="text-white/70 mb-6 leading-relaxed">
-                                Automated deployment pipeline reducing deployment time from 2 hours to 10 minutes. GitHub Actions + AWS Fargate for seamless containerized deployments.
+                                This architecture uses GitHub Actions with OIDC to securely deploy a static website to a private S3 bucket, served via CloudFront, without storing AWS credentials and using temporary STS-based access.
                             </p>
                             <div class="flex flex-wrap gap-2 mb-8">
                                 <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">AWS</span>
