--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
 
                 <!-- Project 3 -->
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+                <!-- <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
                     <div class="order-2 lg:order-1">
                         <div class="cyber-card p-8">
                             <div class="flex items-center gap-3 mb-6">
@@ -188,7 +188,7 @@
                             <img src="https://placehold.co/600x400/111111/FFFFFF?text=VPC_TERRAFORM" alt="Architecture" class="relative rounded-lg border border-white/10 w-full">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
