--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                     <div class="order-1 lg:order-2">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/20 to-purple-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="HackathonFinder.png" alt="Architecture" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-cyan-400/50 hover:scale-[1.02] transition-all duration-300"
-                            data-images='["diagram-export-10-22-2025-1_35_30-AM.png", "infrastructure-composer-Hackathon-Hunter-Stack.yaml(1).png"]'>
+                            <img src="images/HackathonFinder.png" alt="Architecture" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-cyan-400/50 hover:scale-[1.02] transition-all duration-300"
+                            data-images='["images/diagram-export-10-22-2025-1_35_30-AM.png", "images/infrastructure-composer-Hackathon-Hunter-Stack.yaml(1).png"]'>
                             <div class="absolute bottom-4 right-4 bg-black/50 p-2 rounded-full pointer-events-none">
                                 <svg class="w-4 h-4 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"/></svg>
                             </div>
@@ -128,8 +128,8 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
                     <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/20 to-purple-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="OIDC.png" alt="Architecture" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-cyan-400/50 hover:scale-[1.02] transition-all duration-300"
-                            data-images='["OIDC.png"]'>
+                            <img src="images/OIDC.png" alt="Architecture" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-cyan-400/50 hover:scale-[1.02] transition-all duration-300"
+                            data-images='["images/OIDC.png"]'>
                             <div class="absolute bottom-4 right-4 bg-black/50 p-2 rounded-full pointer-events-none">
                                 <svg class="w-4 h-4 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"/></svg>
                             </div>
