--- a/index_hybrid.html
+++ b/index_hybrid.html
@@ -114,13 +114,122 @@
             </div>
             
             <div class="space-y-32">
-                <!-- Project 1 -->
+                <!-- Project 1 - Agentic Hackathon Finder -->
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
                     <div class="order-2 lg:order-1">
                         <div class="cyber-card p-8">
                             <div class="flex items-center gap-3 mb-6">
                                 <div class="w-3 h-3 bg-cyan-400 rounded-full"></div>
                                 <span class="text-xs font-mono text-cyan-400">PROJECT_01</span>
+                            </div>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Agentic Hackathon Finder (FindAthon9000)</h3>
+                            <p class="text-white/70 mb-6 leading-relaxed">
+                                Autonomous AI agent that writes custom scrapers for hackathon websites and executes them in isolated ECS containers. Features serverless architecture with infinite scaling using AWS Bedrock, Lambda, RDS, and OpenSearch Serverless. Sends intelligent Telegram notifications based on user preferences.
+                            </p>
+                            <div class="flex flex-wrap gap-2 mb-8">
+                                <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">Bedrock</span>
+                                <span class="px-3 py-1 bg-purple-500/20 text-purple-300 text-xs font-mono border border-purple-500/30 rounded">LAMBDA</span>
+                                <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">RDS</span>
+                                <span class="px-3 py-1 bg-emerald-500/20 text-emerald-300 text-xs font-mono border border-emerald-500/30 rounded">OpenSearch</span>
+                                <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">ECS</span>
+                            </div>
+                            <div class="flex gap-4">
+                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-cyan-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
+                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-cyan-500 to-purple-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-cyan-500/50 transition-all duration-300">LIVE_DEMO</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="order-1 lg:order-2">
+                        <div class="relative">
+                            <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/20 to-purple-500/20 rounded-lg transform rotate-3"></div>
+                            <img src="images/HackathonFinder.png" alt="Architecture" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-cyan-400/50 hover:scale-[1.02] transition-all duration-300"
+                            data-images='["images/diagram-export-10-22-2025-1_35_30-AM.png", "images/infrastructure-composer-Hackathon-Hunter-Stack.yaml(1).png"]'>
+                            <div class="absolute bottom-4 right-4 bg-black/50 p-2 rounded-full pointer-events-none">
+                                <svg class="w-4 h-4 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"/></svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 2 - Secure Serverless Deployment -->
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+                    <div class="relative">
+                        <div class="absolute inset-0 bg-gradient-to-r from-purple-500/20 to-pink-500/20 rounded-lg transform rotate-3"></div>
+                        <img src="images/OIDC.png" alt="Architecture" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-purple-400/50 hover:scale-[1.02] transition-all duration-300"
+                        data-images='["images/OIDC.png"]'>
+                        <div class="absolute bottom-4 right-4 bg-black/50 p-2 rounded-full pointer-events-none">
+                            <svg class="w-4 h-4 text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"/></svg>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="cyber-card p-8">
+                            <div class="flex items-center gap-3 mb-6">
+                                <div class="w-3 h-3 bg-purple-400 rounded-full"></div>
+                                <span class="text-xs font-mono text-purple-400">PROJECT_02</span>
+                            </div>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Secure Serverless Deployment Pipeline</h3>
+                            <p class="text-white/70 mb-6 leading-relaxed">
+                                Production-ready CI/CD pipeline using GitHub Actions with OIDC authentication and AWS STS for credential-less deployments. Automatically deploys static sites to private S3 buckets with CloudFront CDN distribution and edge optimization.
+                            </p>
+                            <div class="flex flex-wrap gap-2 mb-8">
+                                <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">S3</span>
+                                <span class="px-3 py-1 bg-indigo-500/20 text-indigo-300 text-xs font-mono border border-indigo-500/30 rounded">CloudFront</span>
+                                <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">STS</span>
+                                <span class="px-3 py-1 bg-emerald-500/20 text-emerald-300 text-xs font-mono border border-emerald-500/30 rounded">GitHub Actions</span>
+                                <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">OIDC</span>
+                            </div>
+                            <div class="flex gap-4">
+                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-purple-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
+                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-purple-500/50 transition-all duration-300">LIVE_DEMO</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 3 - Smart API Trading Client -->
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+                    <div class="order-2 lg:order-1">
+                        <div class="cyber-card p-8">
+                            <div class="flex items-center gap-3 mb-6">
+                                <div class="w-3 h-3 bg-emerald-400 rounded-full"></div>
+                                <span class="text-xs font-mono text-emerald-400">PROJECT_03</span>
+                            </div>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Smart API - Automated Trading System</h3>
+                            <p class="text-white/70 mb-6 leading-relaxed">
+                                Real-time algorithmic trading bot integrated with Angel One's SmartAPI platform. Features automated order execution, WebSocket-based live market feeds, multi-threaded order management, and TOTP-based secure authentication. Implements custom trading strategies with position tracking, GTT rules, and comprehensive error handling for production trading.
+                            </p>
+                            <div class="flex flex-wrap gap-2 mb-8">
+                                <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">PYTHON</span>
+                                <span class="px-3 py-1 bg-purple-500/20 text-purple-300 text-xs font-mono border border-purple-500/30 rounded">WEBSOCKETS</span>
+                                <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">REST API</span>
+                                <span class="px-3 py-1 bg-emerald-500/20 text-emerald-300 text-xs font-mono border border-emerald-500/30 rounded">DOCKER</span>
+                                <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">THREADING</span>
+                            </div>
+                            <div class="flex gap-4">
+                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-emerald-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
+                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-emerald-500 to-teal-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-emerald-500/50 transition-all duration-300">LIVE_DEMO</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="order-1 lg:order-2">
+                        <div class="relative">
+                            <div class="absolute inset-0 bg-gradient-to-r from-emerald-500/20 to-teal-500/20 rounded-lg transform rotate-3"></div>
+                            <img src="https://placehold.co/600x400/111111/10B981?text=Trading+Bot" alt="Smart API Trading" class="relative rounded-lg border border-white/10 w-full">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 4 - Traffic Management System -->
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+                    <div class="relative">
+                        <div class="absolute inset-0 bg-gradient-to-r from-orange-500/20 to-yellow-500/20 rounded-lg transform rotate-3"></div>
+                        <img src="https://placehold.co/600x400/111111/F59E0B?text=Traffic+Vision+System" alt="Traffic System" class="relative rounded-lg border border-white/10 w-full">
+                    </div>
+                    <div>
+                        <div class="cyber-card p-8">
+                            <div class="flex items-center gap-3 mb-6">
+                                <div class="w-3 h-3 bg-orange-400 rounded-full"></div>
+                                <span class="text-xs font-mono text-orange-400">PROJECT_04</span>
                             </div>
                             <h3 class="text-3xl font-bold mb-4 text-white">Traffic Management System</h3>
                             <p class="text-white/70 mb-6 leading-relaxed">
@@ -134,45 +243,8 @@
                                 <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">GOOGLE MAPS API</span>
                             </div>
                             <div class="flex gap-4">
-                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-cyan-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
-                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-cyan-500 to-purple-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-cyan-500/50 transition-all duration-300">LIVE_DEMO</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="order-1 lg:order-2">
-                        <div class="relative">
-                            <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/20 to-purple-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="https://placehold.co/600x400/111111/22D3EE?text=Traffic+Vision+System" alt="Traffic System" class="relative rounded-lg border border-white/10 w-full">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 2 -->
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
-                    <div class="relative">
-                        <div class="absolute inset-0 bg-gradient-to-r from-purple-500/20 to-pink-500/20 rounded-lg transform rotate-3"></div>
-                        <img src="https://placehold.co/600x400/111111/A855F7?text=Productivity+Platform" alt="Productivity Platform" class="relative rounded-lg border border-white/10 w-full">
-                    </div>
-                    <div>
-                        <div class="cyber-card p-8">
-                            <div class="flex items-center gap-3 mb-6">
-                                <div class="w-3 h-3 bg-purple-400 rounded-full"></div>
-                                <span class="text-xs font-mono text-purple-400">PROJECT_02</span>
-                            </div>
-                            <h3 class="text-3xl font-bold mb-4 text-white">Custom Productivity Management Platform</h3>
-                            <p class="text-white/70 mb-6 leading-relaxed">
-                                A platform optimizing workspace efficiency by providing various integrated tools and services. Built with Python and Tkinter GUI featuring homebrew paint and notepad applications. Hosted web app on AWS EC2 with S3-based feedback form using core data structures and algorithms.
-                            </p>
-                            <div class="flex flex-wrap gap-2 mb-8">
-                                <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">PYTHON</span>
-                                <span class="px-3 py-1 bg-indigo-500/20 text-indigo-300 text-xs font-mono border border-indigo-500/30 rounded">TKINTER</span>
-                                <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">EC2</span>
-                                <span class="px-3 py-1 bg-emerald-500/20 text-emerald-300 text-xs font-mono border border-emerald-500/30 rounded">S3</span>
-                                <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">AWS</span>
-                            </div>
-                            <div class="flex gap-4">
-                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-purple-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
-                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-purple-500/50 transition-all duration-300">LIVE_DEMO</a>
+                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-orange-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
+                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-orange-500 to-yellow-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-orange-500/50 transition-all duration-300">LIVE_DEMO</a>
                             </div>
                         </div>
                     </div>
@@ -599,12 +671,12 @@
                 > Let's build something amazing together
             </p>
             <div class="flex justify-center gap-8 mb-20 flex-wrap">
-                <a href="#" class="group cyber-card p-6 hover:border-blue-400/50 transition-all duration-300">
+                <a href="https://www.linkedin.com/in/drishan-gupta/" target="_blank" class="group cyber-card p-6 hover:border-blue-400/50 transition-all duration-300">
                     <svg class="w-8 h-8 text-white/70 group-hover:text-blue-400 group-hover:scale-110 transition-all duration-300" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                     </svg>
                 </a>
-                <a href="#" class="group cyber-card p-6 hover:border-gray-400/50 transition-all duration-300">
+                <a href="https://github.com/drishangupta" target="_blank" class="group cyber-card p-6 hover:border-gray-400/50 transition-all duration-300">
                     <svg class="w-8 h-8 text-white/70 group-hover:text-gray-400 group-hover:scale-110 transition-all duration-300" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
