--- a/index_hybrid.html
+++ b/index_hybrid.html
@@ -135,7 +135,7 @@
                             </div>
                             <div class="flex gap-4">
                                 <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-cyan-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
-                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-cyan-500 to-purple-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-cyan-500/50 transition-all duration-300">LIVE_DEMO</a>
+                                <a href="https://drishangupta.me/projects/findathon/index.html" class="px-6 py-2 bg-gradient-to-r from-cyan-500 to-purple-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-cyan-500/50 transition-all duration-300">LIVE_DEMO</a>
                             </div>
                         </div>
                     </div>
