--- a/index_hybrid.html
+++ b/index_hybrid.html
@@ -179,8 +179,8 @@
                                 <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">OIDC</span>
                             </div>
                             <div class="flex gap-4">
-                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-purple-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
-                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-purple-500/50 transition-all duration-300">LIVE_DEMO</a>
+                                <a href="https://github.com/drishangupta/Portfolio/tree/main" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-purple-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
+                                <a href="#" class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-purple-500/50 transition-all duration-300">LIVE_DEMO (This Page)</a>
                             </div>
                         </div>
                     </div>
