--- a/index_hybrid.html
+++ b/index_hybrid.html
@@ -124,7 +124,9 @@
                             </div>
                             <h3 class="text-3xl font-bold mb-4 text-white">Agentic Hackathon Finder (FindAthon9000)</h3>
                             <p class="text-white/70 mb-6 leading-relaxed">
-                                Autonomous AI agent that writes custom scrapers for hackathon websites and executes them in isolated ECS containers. Features serverless architecture with infinite scaling using AWS Bedrock, Lambda, RDS, and OpenSearch Serverless. Sends intelligent Telegram notifications based on user preferences.
+                                This Agentic AI bot writes its OWN scrapper for every new hackathon website it encounters, and runs the scrapper in an isolated ECS container. This serverless architecture allows 
+                                infinite scaling. Uses bedrock, bedrock knowledge bases, RDS(to store scrappers once written or to store found apis). Once it scrapes everything, it sends reminders on telegram on the 
+                                hackathons user finds interesting. 
                             </p>
                             <div class="flex flex-wrap gap-2 mb-8">
                                 <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">Bedrock</span>
@@ -167,9 +169,9 @@
                                 <div class="w-3 h-3 bg-purple-400 rounded-full"></div>
                                 <span class="text-xs font-mono text-purple-400">PROJECT_02</span>
                             </div>
-                            <h3 class="text-3xl font-bold mb-4 text-white">Secure Serverless Deployment Pipeline</h3>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Secure Serverless Portfolio Deployment with OIDC & AWS STS</h3>
                             <p class="text-white/70 mb-6 leading-relaxed">
-                                Production-ready CI/CD pipeline using GitHub Actions with OIDC authentication and AWS STS for credential-less deployments. Automatically deploys static sites to private S3 buckets with CloudFront CDN distribution and edge optimization.
+                                This architecture uses GitHub Actions with OIDC to securely deploy a static website to a private S3 bucket, served via CloudFront, without storing AWS credentials and using temporary STS-based access.
                             </p>
                             <div class="flex flex-wrap gap-2 mb-8">
                                 <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">S3</span>
