--- a/index_hybrid.html
+++ b/index_hybrid.html
@@ -216,7 +216,7 @@
                     <div class="order-1 lg:order-2">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-emerald-500/20 to-teal-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="https://placehold.co/600x400/111111/10B981?text=Trading+Bot" alt="Smart API Trading" class="relative rounded-lg border border-white/10 w-full">
+                            <img src="images/smartapi.png" alt="Smart API Trading" class="relative rounded-lg border border-white/10 w-full">
                         </div>
                     </div>
                 </div>
