--- a/index.html
+++ b/index.html
@@ -158,23 +158,24 @@
                     </div>
                 </div>
 
-                <!-- Project 3 -->
-                <!-- <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+                <!-- Project 3 - Smart API -->
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
                     <div class="order-2 lg:order-1">
                         <div class="cyber-card p-8">
                             <div class="flex items-center gap-3 mb-6">
                                 <div class="w-3 h-3 bg-emerald-400 rounded-full"></div>
                                 <span class="text-xs font-mono text-emerald-400">PROJECT_03</span>
                             </div>
-                            <h3 class="text-3xl font-bold mb-4 text-white">Secure VPC Infrastructure</h3>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Smart API - Automated Trading System</h3>
                             <p class="text-white/70 mb-6 leading-relaxed">
-                                Enterprise-grade Terraform modules for secure, multi-AZ VPC deployment. Enforcing security best practices across all cloud environments.
+                                Real-time algorithmic trading bot integrated with Angel One's SmartAPI platform. Features automated order execution, WebSocket-based live market feeds, multi-threaded order management, and TOTP-based secure authentication. Implements custom trading strategies with position tracking, GTT rules, and comprehensive error handling for production trading.
                             </p>
                             <div class="flex flex-wrap gap-2 mb-8">
-                                <span class="px-3 py-1 bg-red-500/20 text-red-300 text-xs font-mono border border-red-500/30 rounded">AWS</span>
-                                <span class="px-3 py-1 bg-violet-500/20 text-violet-300 text-xs font-mono border border-violet-500/30 rounded">TERRAFORM</span>
-                                <span class="px-3 py-1 bg-teal-500/20 text-teal-300 text-xs font-mono border border-teal-500/30 rounded">VPC</span>
-                                <span class="px-3 py-1 bg-amber-500/20 text-amber-300 text-xs font-mono border border-amber-500/30 rounded">SECURITY</span>
+                                <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 text-xs font-mono border border-cyan-500/30 rounded">PYTHON</span>
+                                <span class="px-3 py-1 bg-purple-500/20 text-purple-300 text-xs font-mono border border-purple-500/30 rounded">WEBSOCKETS</span>
+                                <span class="px-3 py-1 bg-pink-500/20 text-pink-300 text-xs font-mono border border-pink-500/30 rounded">REST API</span>
+                                <span class="px-3 py-1 bg-emerald-500/20 text-emerald-300 text-xs font-mono border border-emerald-500/30 rounded">DOCKER</span>
+                                <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">THREADING</span>
                             </div>
                             <div class="flex gap-4">
                                 <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-emerald-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
@@ -185,10 +186,14 @@
                     <div class="order-1 lg:order-2">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-emerald-500/20 to-teal-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="https://placehold.co/600x400/111111/FFFFFF?text=VPC_TERRAFORM" alt="Architecture" class="relative rounded-lg border border-white/10 w-full">
+                            <img src="images/smartapi.png" alt="Smart API Trading" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-emerald-400/50 hover:scale-[1.02] transition-all duration-300"
+                            data-images='["images/smartapi.png"]'>
+                            <div class="absolute bottom-4 right-4 bg-black/50 p-2 rounded-full pointer-events-none">
+                                <svg class="w-4 h-4 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"/></svg>
+                            </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
