updated the link and image

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <span class="px-3 py-1 bg-orange-500/20 text-orange-300 text-xs font-mono border border-orange-500/30 rounded">THREADING</span>
                             </div>
                             <div class="flex gap-4">
-                                <a href="#" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-emerald-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
+                                <a href="https://github.com/drishangupta/smartapiii" class="px-6 py-2 border border-white/20 text-white/70 hover:text-white hover:border-emerald-400 transition-all duration-300 text-sm font-mono">VIEW_CODE</a>
                                 <a href="#" class="px-6 py-2 bg-gradient-to-r from-emerald-500 to-teal-500 text-black font-mono text-sm hover:shadow-lg hover:shadow-emerald-500/50 transition-all duration-300">LIVE_DEMO</a>
                             </div>
                         </div>
