--- a/index_hybrid.html
+++ b/index_hybrid.html
@@ -88,16 +88,28 @@
                 </h2>
                 <div class="w-24 h-1 bg-gradient-to-r from-cyan-400 to-purple-400 mx-auto"></div>
             </div>
-            <div class="cyber-card p-8 md:p-12">
-                <p class="text-lg md:text-xl text-white/80 leading-relaxed mb-6">
-                    I'm a Computer Science student and backend engineer with expertise in <span class="text-cyan-400 font-semibold">AWS cloud infrastructure</span>, <span class="text-purple-400 font-semibold">automation</span>, and <span class="text-pink-400 font-semibold">AI/ML systems</span>. I specialize in building serverless architectures, implementing CI/CD pipelines, and developing scalable backend solutions using Python and Django.
-                </p>
-                <p class="text-lg md:text-xl text-white/80 leading-relaxed mb-6">
-                    As an <span class="text-yellow-400 font-bold">AWS Cloud Captain</span> — one of only <span class="text-yellow-400 font-bold">87 selected worldwide</span> — I founded and lead the <span class="text-cyan-400 font-semibold">AWS Cloud Club</span> at my college, organizing <span class="text-yellow-400 font-bold">20+ workshops</span> and engaging <span class="text-yellow-400 font-bold">1100+ students</span>. My professional experience includes automation engineering at PayBefikar and software development at LinuxWorld Informatics.
-                </p>
-                <p class="text-lg md:text-xl text-white/80 leading-relaxed">
-                    I hold <span class="text-orange-400 font-semibold">4 AWS certifications</span> including Solutions Architect Associate and AI Practitioner, plus <span class="text-red-400 font-semibold">RHCSA</span>. Currently exploring <span class="text-emerald-400 font-semibold">Agentic AI</span>, <span class="text-emerald-400 font-semibold">Computer Vision</span>, and cloud-native development. Open to collaborations on innovative cloud and AI projects.
-                </p>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+                <!-- Profile Picture -->
+                <div class="order-1 lg:order-1 flex justify-center">
+                    <div class="relative w-80 h-80 group">
+                        <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/30 to-purple-500/30 rounded-lg transform rotate-6 group-hover:rotate-12 transition-transform duration-300"></div>
+                        <div class="absolute inset-0 bg-gradient-to-r from-purple-500/30 to-pink-500/30 rounded-lg transform -rotate-6 group-hover:-rotate-12 transition-transform duration-300"></div>
+                        <img src="https://placehold.co/400x400/111111/22D3EE?text=Profile+Photo" alt="Drishan Gupta" class="relative rounded-lg border-2 border-white/10 w-full h-full object-cover">
+                    </div>
+                </div>
+                
+                <!-- About Text -->
+                <div class="order-2 lg:order-2 cyber-card p-8 md:p-12">
+                    <p class="text-lg md:text-xl text-white/80 leading-relaxed mb-6">
+                        I'm a Computer Science student and backend engineer with expertise in <span class="text-cyan-400 font-semibold">AWS cloud infrastructure</span>, <span class="text-purple-400 font-semibold">automation</span>, and <span class="text-pink-400 font-semibold">AI/ML systems</span>. I specialize in building serverless architectures, implementing CI/CD pipelines, and developing scalable backend solutions using Python and Django.
+                    </p>
+                    <p class="text-lg md:text-xl text-white/80 leading-relaxed mb-6">
+                        As an <span class="text-yellow-400 font-bold">AWS Cloud Captain</span> — one of only <span class="text-yellow-400 font-bold">87 selected worldwide</span> — I founded and lead the <span class="text-cyan-400 font-semibold">AWS Cloud Club</span> at my college, organizing <span class="text-yellow-400 font-bold">20+ workshops</span> and engaging <span class="text-yellow-400 font-bold">1100+ students</span>. My professional experience includes automation engineering at PayBefikar and software development at LinuxWorld Informatics.
+                    </p>
+                    <p class="text-lg md:text-xl text-white/80 leading-relaxed">
+                        I hold <span class="text-orange-400 font-semibold">4 AWS certifications</span> including Solutions Architect Associate and AI Practitioner, plus <span class="text-red-400 font-semibold">RHCSA</span>. Currently exploring <span class="text-emerald-400 font-semibold">Agentic AI</span>, <span class="text-emerald-400 font-semibold">Computer Vision</span>, and cloud-native development. Open to collaborations on innovative cloud and AI projects.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
